--- a/app/src/main/res/layout/activity_gesturelock.xml
+++ b/app/src/main/res/layout/activity_gesturelock.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@mipmap/start_background" >
+    android:background="@android:color/holo_orange_light" >
 
 
     <com.rujian.consumemanager.view.GestureLockView
