--- a/app/src/main/res/layout/actvity_saverecord.xml
+++ b/app/src/main/res/layout/actvity_saverecord.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/fl_savepage">
+    android:id="@+id/fl_savepage"
+    android:background="@color/green">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -13,7 +14,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/green"
             android:orientation="vertical"
             android:id="@+id/ll_save_date"
             android:focusable="false">
@@ -148,94 +148,7 @@
                     android:minHeight="100dp"
                     android:textColor="@color/green"
                     android:textSize="20dp" />
-                <LinearLayout
-                    android:id="@+id/ll_voiceplay_bar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/globle_player_bg"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:visibility="gone">
 
-                    <ImageView
-                        android:id="@+id/iv_voiceplay_btn"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/globle_player_btn_play" />
-
-                    <ProgressBar
-                        android:id="@+id/prb_voiceplay_bar"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="match_parent"
-                        android:layout_height="6dip"
-                        android:layout_margin="8dip"
-                        android:layout_weight="1"
-                        android:max="100"
-                        android:progress="50"
-                        android:progressDrawable="@drawable/globle_player_progress_bar_bg" />
-
-                    <TextView
-                        android:id="@+id/tv_voiceplay_time"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="7″"
-                        android:textColor="#999999"
-                        android:textSize="12sp" />
-
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/iv_delete_voice"
-                        android:background="@mipmap/ic_remove"
-                        android:layout_marginLeft="10dp"/>
-                </LinearLayout>
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:id="@+id/fl_diaplay_voice_icon"
-                    android:visibility="gone">
-
-                    <ImageView
-                        android:layout_width="45dp"
-                        android:layout_height="50dp"
-                        android:id="@+id/imageView"
-                        android:layout_gravity="center_horizontal|top"
-                        android:background="@mipmap/voice_ugc_icon_recording"/>
-
-                    <ImageView
-                        android:layout_width="15dp"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/iv_voice_size"
-                        android:layout_gravity="center"
-                        android:background="@drawable/voice_ugc_icon_recordingvolume"/>
-
-                    <ImageView
-                        android:layout_width="45dp"
-                        android:layout_height="50dp"
-                        android:id="@+id/imageView3"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/voice_ugc_icon_recording_ring"
-                        android:visibility="visible"/>
-                </FrameLayout>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="7&apos;&apos;"
-                    android:id="@+id/tv_record_time"
-                    android:layout_gravity="center_horizontal"
-                    android:visibility="gone"/>
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="按着说话"
-                    android:id="@+id/btn_record_voice"
-                    android:background="@drawable/globle_player_bg"
-                    android:textColor="#bfbfbf"/>
             </LinearLayout>
 
             <LinearLayout
